--- a/bingo.css
+++ b/bingo.css
@@ -7,14 +7,11 @@ body {
     margin-right: 20px
 }
 
-<<<<<<< HEAD
-=======
 p {
     margin-left: 15%;
     margin-right: 15%;
 }
 
->>>>>>> a387a99d19117d6f76ca81b3c2fceaa416500e5e
 a {
     color: #2E9CFF
 }
@@ -72,14 +69,8 @@ form {
     margin: 10px;
     padding: 20px;
     text-align: left;
-<<<<<<< HEAD
-=======
 }
 
-ul,
-li {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
->>>>>>> a387a99d19117d6f76ca81b3c2fceaa416500e5e
+#embeddedPlayer{
+   display: none; 
 }
