--- a/bingo.css
+++ b/bingo.css
@@ -71,6 +71,13 @@ form {
     text-align: left;
 }
 
-#embeddedPlayer{
-   display: none; 
+#embeddedPlayer {
+    display: none;
+}
+
+ul,
+li {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
 }
