--- a/bingo.css
+++ b/bingo.css
@@ -17,19 +17,19 @@ a {
 }
 
 h1 {
-    background: #B00000;
+    background: #4B0082;
     text-align: center;
     font-family: Playfair Display;
     padding: 10px;
-    border: 1px solid #650000;
+    border: 1px solid #4B0082;
 }
 
 h2 {
-    background: #B00000;
+    background: #4B0082;
     font-family: Playfair Display;
     text-align: center;
     padding: 10px;
-    border: 1px solid #650000;
+    border: 1px solid #22003B;
 }
 
 table {
@@ -38,7 +38,7 @@ table {
 }
 
 td {
-    background: #1769B3;
+    background: #800080;
     padding: 10px 20px;
     text-align: center;
     border: 1px solid black;
@@ -65,7 +65,7 @@ form {
 
 #instructions {
     display: none;
-    border: 1px solid #650000;
+    border: 1px solid #4B0082;
     margin: 10px;
     padding: 20px;
     text-align: left;
